syntax = "proto3";

package storage;

option go_package = "storage-file-service/proto;storage";

service FileService {

  rpc UploadFile(stream UploadRequest) returns (UploadResponse);

  rpc GetFileList(FileListRequest) returns (FileListResponse);

  rpc DownloadFile(FileRequest) returns (stream FileResponse);
}

// ---- ЗАПРОСЫ И ОТВЕТЫ ---- //

message UploadRequest {
  string filename = 1;
  bytes chunk = 2;
}

message UploadResponse {
  string message = 1;
}

message FileListRequest {}

message FileListResponse {
  repeated FileInfo files = 1;
}

message FileInfo {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
}

message FileRequest {
  string filename = 1;
}

message FileResponse {
  bytes chunk = 1;
}
